--- a/StyleSheets/style.css
+++ b/StyleSheets/style.css
@@ -3,3 +3,7 @@ body{
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+.service_links{
+    list-style: none;
+}
