--- a/StyleSheets/index.css
+++ b/StyleSheets/index.css
@@ -1,6 +1,7 @@
 /* container */
 .wrapper{
     width:100%;
+    height: 100%;
     background-image:url(../img/content_background.jpeg);
     filter: blur(30);
     background-repeat:no-repeat;
