--- a/contents/css/style.css
+++ b/contents/css/style.css
@@ -42,7 +42,7 @@ body {
 	color: #ccc;		/*全体の文字色*/
 	line-height: 2;		/*行間*/
 }
-
+/*こここまるわ*/
 body:before{
 	background: url(../images/background.jpeg);
 	filter: blur(8px);
